src/app/home/home.component.css
@media (min-width: 769px) {
    /* CSS in here for desktop only */
    .container {
      padding-left: 200px;
      padding-right: 200px;
    }
}

.workout-button {
  background-color: #42f483;
  color: #1d163a;
  display: block;
  width: 100%;
  height: 200%;
}

.container {
  background-color: black;
  background-size: contain;
  min-height: 100%;
  min-width: 100%;
  height: 100%;
}

.nav {
  border-radius: 0px;
  background-color: #FAA24A;
  /* background-color:#31cd32; */
  text-align: center
}

.nav a {
  color: white
}

.nav a:hover {
  color: grey;
}

.jumbotron {
  border-radius: 0px;
  color: lightgrey;
  padding: 0;
  /* margin: 0 auto; */
  /* background-size: cover; */
  /* background-color: black; */
}


.weatherImage {
  max-width: 100%;
  max-height: 100%;
  margin: 0 auto;
  /* width: 100%;
  height: 100%; */
 }

.fa {
  max-width: 100%;
  max-height: 100%;
}

.mealDescription {
  color: #FAA24A;
}

h2 {
  color: white;
}

h3 {
  color: white;
}

h4 {
  color: #FAA24A;
}

.btn {
  border-radius: 0px;
  background-color:#FAA24A;
  color: white;
  width: 100%
}

.weatherText {
  color: black;
font-weight: bold;
}

.workoutButton {
  width: 100%;
  background-color: #31cd32;
}
/* .weatherText {
  color: lightgrey;
} */
.forecastText {
  color: lightgrey;
  margin-top: -40%;
  padding-left: 10px;
}

table { width: 100%; box-sizing: border-box; box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.1); font-family: 'Ubuntu'; /*border-collapse: collapse;*/ border-spacing: 0; background-color: #333333; }

th, td { border: 1px solid rgba(255,255,255,0.1); box-sizing: border-box; }

th { text-transform: uppercase; font-size:10px; font-weight:700; padding: 10px 0; color: rgba(255,255,255,0.5); background-color: #292929; letter-spacing: 1px; }

td { width: 14.285%; transition: all 0.3s; font-size: 14px; color: rgba(255,255,255,0.6); font-weight: 400; font-size: 14px; padding: 1.5% 1.5% 5%; vertical-align: initial; padding: 1.5% 0 ; height: 75px; }

.day:hover { background-color: rgba(0,0,0,0.1); cursor:pointer; }

.today { color: #FFF; background-color: rgba(0,0,0,.25) !important; }

span.number { margin-left: 10% }

span.event { height: 4px; background-color: rgba(0,0,0,.3); display: block; margin: 5px 10%; border-radius: 2px; background-color: #91c33b; }

span.event-multiday { margin: 5px -2px; border-radius: 0; }
span.event-multiday-start { margin-right: -4px;  }
span.event-multiday-finish { margin-left: -4px;  }
.day-name {
  text-align: center;
}
span.event-ghost { background-color:transparent; }

.checkmark {
  position: relative;
  margin-left: 25px;
  margin-bottom: 35px;
  color: #31cd32
}

